FIX tabs on My Recipes page being too long on mobile. * Add link to view edited recipe at bottom near Update button.

--- a/public/assets/css/scss/modules/_recipeForm.scss
+++ b/public/assets/css/scss/modules/_recipeForm.scss
@@ -35,12 +35,23 @@
 			padding-top: 0;
 		}
 	}
-	&-specialChars button {
-		font-size: 14px;
-		margin-left: 2px;
+	&-specialChars {
+		small {
+			display: block;
+			margin-bottom: 6px;
 
-		&:first-child {
-			margin-left: 0;
+			@include mq($mq-large) {
+				display: inline;
+				margin-bottom: 0;
+			}
+		}
+		button {
+			font-size: 14px;
+			margin-left: 2px;
+
+			&:first-child {
+				margin-left: 0;
+			}
 		}
 	}
 	&-dietary select {
